[package]
name = "navicula"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/terhechte/dioxus.git", branch = "dioxus_macos_hacks"}
dioxus-desktop = { git = "https://github.com/terhechte/dioxus.git", branch = "dioxus_macos_hacks"}
#dioxus = { path = "/Users/terhechte/Development/temporary/dioxus_clone/packages/dioxus" }
#dioxus-desktop = { path = "/Users/terhechte/Development/temporary/dioxus_clone/packages/desktop" }
futures-util = "0.3.21"
futures-channel = "0.3.25"
flume = "0.10.14"
tokio = { version = "1.16.1", features = ["full"] }
itertools = "*"
log = "0.4.17"
serde_json = "1.0.93"
fxhash = "0.2.1"
env_logger = "0.10.0"
